@@ -1,35 +1,6 @@
 package com.ksaraev.spotifyrun.service.recommendations;
 
-import com.ksaraev.spotifyrun.client.SpotifyClient;
-import com.ksaraev.spotifyrun.client.items.SpotifyTrackItem;
-import com.ksaraev.spotifyrun.client.requests.GetRecommendationsRequest;
-import com.ksaraev.spotifyrun.client.responses.GetRecommendationsResponse;
-import com.ksaraev.spotifyrun.config.requests.SpotifyGetRecommendationsRequestConfig;
-import com.ksaraev.spotifyrun.exception.service.GetRecommendationsException;
-import com.ksaraev.spotifyrun.model.artist.Artist;
-import com.ksaraev.spotifyrun.model.spotify.SpotifyTrack;
-import com.ksaraev.spotifyrun.model.track.Track;
-import com.ksaraev.spotifyrun.model.track.TrackFeatures;
-import com.ksaraev.spotifyrun.model.track.TrackFeaturesMapper;
-import com.ksaraev.spotifyrun.model.track.TrackMapper;
-import com.ksaraev.spotifyrun.service.RecommendationsService;
-import com.ksaraev.spotifyrun.service.SpotifyRecommendationsService;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
-import jakarta.validation.Validation;
-import jakarta.validation.Validator;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import java.net.URI;
-import java.util.*;
-
 import static com.ksaraev.spotifyrun.exception.service.GetRecommendationsException.UNABLE_TO_GET_RECOMMENDATIONS;
-import static com.ksaraev.spotifyrun.utils.JsonHelper.jsonToObject;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
@@ -38,29 +9,80 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
 import static org.mockito.Mockito.never;
 
+import com.ksaraev.spotifyrun.client.SpotifyClient;
+import com.ksaraev.spotifyrun.client.api.GetRecommendationsRequest;
+import com.ksaraev.spotifyrun.client.api.GetRecommendationsResponse;
+import com.ksaraev.spotifyrun.client.items.SpotifyArtistItem;
+import com.ksaraev.spotifyrun.client.items.SpotifyTrackItem;
+import com.ksaraev.spotifyrun.config.requests.SpotifyGetRecommendationsRequestConfig;
+import com.ksaraev.spotifyrun.exception.service.GetRecommendationsException;
+import com.ksaraev.spotifyrun.model.artist.Artist;
+import com.ksaraev.spotifyrun.model.spotify.SpotifyArtist;
+import com.ksaraev.spotifyrun.model.spotify.SpotifyTrack;
+import com.ksaraev.spotifyrun.model.spotify.SpotifyTrackFeatures;
+import com.ksaraev.spotifyrun.model.track.Track;
+import com.ksaraev.spotifyrun.model.track.TrackFeatures;
+import com.ksaraev.spotifyrun.model.track.TrackFeaturesMapper;
+import com.ksaraev.spotifyrun.model.track.TrackMapper;
+import com.ksaraev.spotifyrun.service.RecommendationsService;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
+import jakarta.validation.Validation;
+import jakarta.validation.executable.ExecutableValidator;
+import java.lang.reflect.Method;
+import java.math.BigDecimal;
+import java.net.URI;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.IntStream;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+
 class RecommendationsServiceTest {
+  private static final ExecutableValidator executableValidator =
+      Validation.buildDefaultValidatorFactory().getValidator().forExecutables();
+  private static final String GET_RECOMMENDATIONS = "getRecommendations";
   @Mock private SpotifyClient spotifyClient;
   @Mock private SpotifyGetRecommendationsRequestConfig requestConfig;
   @Mock private TrackMapper trackMapper;
   @Mock private TrackFeaturesMapper trackFeaturesMapper;
-  @Captor private ArgumentCaptor<List<SpotifyTrackItem>> spotifyTrackItemsArgumentCaptor;
-  private SpotifyRecommendationsService underTest;
-  private Validator validator;
+  private RecommendationsService underTest;
+  @Captor private ArgumentCaptor<TrackFeatures> trackFeaturesArgumentCaptor;
+  @Captor private ArgumentCaptor<GetRecommendationsRequest> getRecommendationsRequestArgumentCaptor;
+  @Captor private ArgumentCaptor<List<SpotifyTrackItem>> trackItemsArgumentCaptor;
 
   @BeforeEach
   void setUp() {
-    validator = Validation.buildDefaultValidatorFactory().getValidator();
     MockitoAnnotations.openMocks(this);
     underTest =
         new RecommendationsService(spotifyClient, requestConfig, trackMapper, trackFeaturesMapper);
   }
 
   @Test
-  void itShouldGetTracks() {
+  void itShouldGetRecommendations() {
     // Given
-    String artistId = "5VnrVRYzaatWXs102ScGwN";
-    String artistName = "name";
-    URI artistUri = URI.create("spotify:artist:5VnrVRYzaatWXs102ScGwN");
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String seedTrackId = "0000567890AaBbCcDdEeFfG";
+    String seedTrackName = "seed track name";
+    URI seedTrackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer seedTrackPopularity = 51;
+
+    String recommendationTrackId = "112233445AaBbCcDdEeFfG";
+    String recommendationTrackName = "recommendation track name";
+    URI recommendationTrackUri = URI.create("spotify:track:112233445AaBbCcDdEeFfG");
+    Integer recommendationTrackPopularity = 51;
 
     Artist artist =
         Artist.builder()
@@ -70,10 +92,120 @@ class RecommendationsServiceTest {
             .genres(Collections.emptyList())
             .build();
 
-    String trackId = "5Ko5Jn0OG8IDFEHhAYsCnj";
-    String trackName = "name";
-    URI trackUri = URI.create("spotify:track:5Ko5Jn0OG8IDFEHhAYsCnj");
-    Integer trackPopularity = 32;
+    List<SpotifyArtist> artists = List.of(artist);
+
+    Track seedTrack =
+        Track.builder()
+            .id(seedTrackId)
+            .name(seedTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> seedTracks = List.of(seedTrack);
+
+    Track recommendationTrack =
+        Track.builder()
+            .id(recommendationTrackId)
+            .name(recommendationTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> recommendationTracks = List.of(recommendationTrack);
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    SpotifyArtistItem artistItem =
+        SpotifyArtistItem.builder().id(artistId).name(artistName).uri(artistUri).build();
+
+    List<SpotifyArtistItem> artistItems = List.of(artistItem);
+
+    SpotifyTrackItem trackItem =
+        SpotifyTrackItem.builder()
+            .id(recommendationTrackId)
+            .name(recommendationTrackName)
+            .uri(recommendationTrackUri)
+            .popularity(recommendationTrackPopularity)
+            .artistItems(artistItems)
+            .build();
+
+    List<SpotifyTrackItem> recommendationTrackItems = Collections.singletonList(trackItem);
+
+    List<String> seedTrackIds = List.of(seedTrackId);
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    GetRecommendationsRequest getRecommendationsRequest =
+        GetRecommendationsRequest.builder()
+            .seedTrackIds(seedTrackIds)
+            .trackFeatures(requestTrackFeatures)
+            .limit(limit)
+            .build();
+
+    GetRecommendationsResponse getRecommendationsResponse =
+        GetRecommendationsResponse.builder().trackItems(recommendationTrackItems).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
+
+    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
+        .willReturn(getRecommendationsResponse);
+
+    given(trackMapper.mapItemsToTracks(anyList())).willReturn(recommendationTracks);
+
+    // When
+    underTest.getRecommendations(seedTracks, trackFeatures);
+
+    // Then
+    then(trackFeaturesMapper).should().mapToRequestFeatures(trackFeaturesArgumentCaptor.capture());
+
+    assertThat(trackFeaturesArgumentCaptor.getValue()).isNotNull().isEqualTo(trackFeatures);
+
+    then(spotifyClient)
+        .should()
+        .getRecommendations(getRecommendationsRequestArgumentCaptor.capture());
+
+    assertThat(getRecommendationsRequestArgumentCaptor.getValue())
+        .isNotNull()
+        .isEqualTo(getRecommendationsRequest);
+
+    then(trackMapper).should().mapItemsToTracks(trackItemsArgumentCaptor.capture());
+
+    assertThat(trackItemsArgumentCaptor.getAllValues()).containsExactly(recommendationTrackItems);
+  }
+
+  @ParameterizedTest
+  @ValueSource(ints = {0, 6})
+  void itShouldDetectGetRecommendationsConstraintViolationWhenSeedTracksSizeIsNotValid(
+      Integer tracksNumber) throws Exception {
+    // Given
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String trackId = "0000567890AaBbCcDdEeFfG";
+    String trackName = "seed track name";
+    URI trackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer trackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
+            .build();
+
+    List<SpotifyArtist> artists = List.of(artist);
 
     Track track =
         Track.builder()
@@ -81,561 +213,572 @@ class RecommendationsServiceTest {
             .name(trackName)
             .uri(trackUri)
             .popularity(trackPopularity)
-            .artists(List.of(artist))
+            .artists(artists)
             .build();
 
-    String getRecommendationsResponseJson =
-        """
-          {
-            "tracks":[
-              {
-                "album":{
-                  "album_type":"SINGLE",
-                  "artists":[
-                    {
-                      "external_urls":{
-                        "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                      },
-                      "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                      "id":"8ArsfFN0BmEeVYPzQEReRv",
-                      "name":"name",
-                      "type":"artist",
-                      "uri":"spotify:artist:8ArsfFN0BmEeVYPzQEReRv"
-                    }
-                  ],
-                  "available_markets":[
-                    "AD"
-                  ],
-                  "external_urls":{
-                    "spotify":"https://open.spotify.com/album/0Ta0Ro3omKEm0SRTxYX5ZX"
-                  },
-                  "href":"https://api.spotify.com/v1/albums/0Ta0Ro3omKEm0SRTxYX5ZX",
-                  "id":"0Ta0Ro3omKEm0SRTxYX5ZX",
-                  "images":[
-                    {
-                      "height":640,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":640
-                    },
-                    {
-                      "height":300,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":300
-                    },
-                    {
-                      "height":64,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":64
-                    }
-                  ],
-                  "name":"Sleep Paralysis",
-                  "release_date":"2022-01-01",
-                  "release_date_precision":"day",
-                  "total_tracks":1,
-                  "type":"album",
-                  "uri":"spotify:album:0Ta0Ro3omKEm0SRTxYX5ZX"
-                },
-                "artists":[
-                  {
-                    "external_urls":{
-                      "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                    },
-                    "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                    "id":"%s",
-                    "name":"%s",
-                    "type":"artist",
-                    "uri":"%s"
-                  }
-                ],
-                "available_markets":[
-                  "AR"
-                ],
-                "disc_number":1,
-                "duration_ms":213030,
-                "explicit":true,
-                "external_ids":{
-                  "isrc":"CC5KR0000100"
-                },
-                "external_urls":{
-                  "spotify":"https://open.spotify.com/track/3ZRTh3V53QHNjJRCzwlAqh"
-                },
-                "href":"https://api.spotify.com/v1/tracks/3ZRTh3V53QHNjJRCzwlAqh",
-                "id":"%s",
-                "is_local":false,
-                "name":"%s",
-                "popularity":%s,
-                "preview_url":"https://p.scdn.co/mp3-preview/cce282e15fecd2308ac7de6d3c1439bb8fffb304?cid=774b29d4f13844c495f206cafdad9c86",
-                "track_number":1,
-                "type":"track",
-                "uri":"%s"
-              }
-            ],
-            "seeds":[
-              {
-                "initialPoolSize":0,
-                "afterFilteringSize":0,
-                "afterRelinkingSize":0,
-                "id":"synt-pop",
-                "type":"GENRE",
-                "href":null
-              },
-              {
-                "initialPoolSize":0,
-                "afterFilteringSize":0,
-                "afterRelinkingSize":0,
-                "id":"6J4LmfWAfxkEfQZE0OKCo6",
-                "type":"ARTIST",
-                "href":"https://api.spotify.com/v1/artists/6J4LmfWAfxkEfQZE0OKCo6"
-              },
-              {
-                "initialPoolSize":500,
-                "afterFilteringSize":500,
-                "afterRelinkingSize":500,
-                "id":"6J4LmfWAfxkEfQZE0OKCo6",
-                "type":"TRACK",
-                "href":"https://api.spotify.com/v1/tracks/6J4LmfWAfxkEfQZE0OKCo6"
-              }
-            ]
-          }
-          """
-            .formatted(
-                artistId, artistName, artistUri, trackId, trackName, trackPopularity, trackUri);
+    List<SpotifyTrack> tracks = new ArrayList<>();
 
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
-            .build();
+    TrackFeatures trackFeatures = TrackFeatures.builder().build();
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    IntStream.range(0, tracksNumber).forEach(index -> tracks.add(track));
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
+    Method getRecommendations =
+        RecommendationsService.class.getMethod(
+            "getRecommendations", List.class, SpotifyTrackFeatures.class);
 
-    given(requestConfig.getLimit()).willReturn(1);
-    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
-        .willReturn(jsonToObject(getRecommendationsResponseJson, GetRecommendationsResponse.class));
-    given(trackMapper.mapItemsToTracks(anyList())).willReturn(List.of(track));
-
-    // Then
-    assertThat(underTest.getRecommendations(List.of(seedTrack), TrackFeatures.builder().build()))
-        .containsExactly(track);
-  }
-
-  @Test
-  void itShouldDetectGetRecommendationsResponseConstraintViolations() {
-    // Given
-    String message = "trackItems[1].id: must not be null";
-    String spotifyTrackItemJson =
-        """
-          {
-            "album":{
-              "album_type":"SINGLE",
-              "artists":[
-                {
-                  "external_urls":{
-                    "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                  },
-                  "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                  "id":"8ArsfFN0BmEeVYPzQEReRv",
-                  "name":"name",
-                  "type":"artist",
-                  "uri":"spotify:artist:8ArsfFN0BmEeVYPzQEReRv"
-                }
-              ],
-              "available_markets":[
-                "AD"
-              ],
-              "external_urls":{
-                "spotify":"https://open.spotify.com/album/0Ta0Ro3omKEm0SRTxYX5ZX"
-              },
-              "href":"https://api.spotify.com/v1/albums/0Ta0Ro3omKEm0SRTxYX5ZX",
-              "id":"0Ta0Ro3omKEm0SRTxYX5ZX",
-              "images":[
-                {
-                  "height":640,
-                  "url":"https://i.scdn.co/image/1234567890",
-                  "width":640
-                },
-                {
-                  "height":300,
-                  "url":"https://i.scdn.co/image/1234567890",
-                  "width":300
-                },
-                {
-                  "height":64,
-                  "url":"https://i.scdn.co/image/1234567890",
-                  "width":64
-                }
-              ],
-              "name":"Sleep Paralysis",
-              "release_date":"2022-01-01",
-              "release_date_precision":"day",
-              "total_tracks":1,
-              "type":"album",
-              "uri":"spotify:album:0Ta0Ro3omKEm0SRTxYX5ZX"
-            },
-            "artists":[
-              {
-                "external_urls":{
-                  "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                },
-                "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                "id":"5VnrVRYzaatWXs102ScGwN",
-                "name":"name",
-                "type":"artist",
-                "uri":"spotify:artist:5VnrVRYzaatWXs102ScGwN"
-              }
-            ],
-            "available_markets":[
-              "AR"
-            ],
-            "disc_number":1,
-            "duration_ms":213030,
-            "explicit":true,
-            "external_ids":{
-              "isrc":"CC5KR0000100"
-            },
-            "external_urls":{
-              "spotify":"https://open.spotify.com/track/3ZRTh3V53QHNjJRCzwlAqh"
-            },
-            "href":"https://api.spotify.com/v1/tracks/3ZRTh3V53QHNjJRCzwlAqh",
-            "is_local":false,
-            "name":"name",
-            %s
-            "popularity":55,
-            "preview_url":"https://p.scdn.co/mp3-preview/cce282e15fecd2308ac7de6d3c1439bb8fffb304?cid=774b29d4f13844c495f206cafdad9c86",
-            "track_number":1,
-            "type":"track",
-            "uri":"spotify:track:5Ko5Jn0OG8IDFEHhAYsCnj"
-          }
-          """;
-
-    String idJsonKeyValue = """
-            "id":"5Ko5Jn0OG8IDFEHhAYsCnj",""";
-
-    SpotifyTrackItem spotifyTrackItemOne =
-        jsonToObject(spotifyTrackItemJson.formatted(idJsonKeyValue), SpotifyTrackItem.class);
-
-    SpotifyTrackItem spotifyTrackItemTwo =
-        jsonToObject(spotifyTrackItemJson.formatted(""), SpotifyTrackItem.class);
-
-    GetRecommendationsResponse getRecommendationsResponse =
-        new GetRecommendationsResponse(
-            Arrays.asList(spotifyTrackItemOne, spotifyTrackItemTwo), null);
+    Object[] parameterValues = {tracks, trackFeatures};
 
     // When
-    Set<ConstraintViolation<GetRecommendationsResponse>> violations =
-        validator.validate(getRecommendationsResponse);
+    Set<ConstraintViolation<RecommendationsService>> constraintViolations =
+        executableValidator.validateParameters(underTest, getRecommendations, parameterValues);
+
     // Then
-    assertThat(violations).hasSize(1);
-    assertThat(new ConstraintViolationException(violations)).hasMessage(message);
+    assertThat(constraintViolations).hasSize(1);
+    assertThat(new ConstraintViolationException(constraintViolations))
+        .hasMessage(GET_RECOMMENDATIONS + ".seedTracks: size must be between 1 and 5");
   }
 
   @Test
-  void itShouldReturnEmptyListWhenSpotifyTrackItemsListIsEmpty() {
+  void itShouldDetectGetRecommendationsConstraintViolationWhenSeedTracksContainsNullElements()
+      throws Exception {
     // Given
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String trackId = "0000567890AaBbCcDdEeFfG";
+    String trackName = "seed track name";
+    URI trackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer trackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
             .build();
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    List<SpotifyArtist> artists = List.of(artist);
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
-
-    given(requestConfig.getLimit()).willReturn(50);
-    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
-        .willReturn(new GetRecommendationsResponse(List.of(), null));
-    // Then
-    assertThat(underTest.getRecommendations(List.of(seedTrack), null)).isEmpty();
-    then(trackMapper).should(never()).mapItemsToTracks(spotifyTrackItemsArgumentCaptor.capture());
-  }
-
-  @Test
-  void itShouldReturnEmptyListWhenSpotifyTrackItemsListIsNull() {
-    // Given
-    SpotifyTrack seedTrack =
+    Track track =
         Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+            .id(trackId)
+            .name(trackName)
+            .uri(trackUri)
+            .popularity(trackPopularity)
+            .artists(artists)
             .build();
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    List<SpotifyTrack> tracks = new ArrayList<>();
+    tracks.add(track);
+    tracks.add(null);
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
+    TrackFeatures trackFeatures = TrackFeatures.builder().build();
 
-    given(requestConfig.getLimit()).willReturn(50);
-    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
-        .willReturn(new GetRecommendationsResponse(null, null));
+    Method getRecommendations =
+        RecommendationsService.class.getMethod(
+            "getRecommendations", List.class, SpotifyTrackFeatures.class);
+
+    Object[] parameterValues = {tracks, trackFeatures};
+
+    // When
+    Set<ConstraintViolation<RecommendationsService>> constraintViolations =
+        executableValidator.validateParameters(underTest, getRecommendations, parameterValues);
+
     // Then
-    assertThat(underTest.getRecommendations(List.of(seedTrack), null)).isEmpty();
-    then(trackMapper).should(never()).mapItemsToTracks(spotifyTrackItemsArgumentCaptor.capture());
+    assertThat(constraintViolations).hasSize(1);
+    assertThat(new ConstraintViolationException(constraintViolations))
+        .hasMessage(GET_RECOMMENDATIONS + ".seedTracks[1].<list element>: must not be null");
   }
 
   @Test
-  void itShouldReturnEmptyListWhenSpotifyTrackItemsListElementsAreNull() {
+  void itShouldDetectGetRecommendationsConstraintViolationWhenSeedTracksIsNull() throws Exception {
     // Given
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+    TrackFeatures trackFeatures = TrackFeatures.builder().build();
+
+    Method getRecommendations =
+        RecommendationsService.class.getMethod(
+            "getRecommendations", List.class, SpotifyTrackFeatures.class);
+
+    Object[] parameterValues = {null, trackFeatures};
+
+    // When
+    Set<ConstraintViolation<RecommendationsService>> constraintViolations =
+        executableValidator.validateParameters(underTest, getRecommendations, parameterValues);
+
+    // Then
+    assertThat(constraintViolations).hasSize(1);
+    assertThat(new ConstraintViolationException(constraintViolations))
+        .hasMessage(GET_RECOMMENDATIONS + ".seedTracks: must not be null");
+  }
+
+  @ParameterizedTest
+  @CsvSource(
+      delimiter = '|',
+      nullValues = "null",
+      textBlock =
+          """
+           null                   |seed track name|spotify:track:1234567890AaBbCcDdEeFfG|51 |TRUE |.seedTracks[0].id: must not be null
+           0000567890AaBbCcDdEeFfG|null           |spotify:track:1234567890AaBbCcDdEeFfG|51 |TRUE |.seedTracks[0].name: must not be empty
+           0000567890AaBbCcDdEeFfG|seed track name|null                                 |51 |TRUE |.seedTracks[0].uri: must not be null
+           0000567890AaBbCcDdEeFfG|seed track name|spotify:track:1234567890AaBbCcDdEeFfG|-1 |TRUE |.seedTracks[0].popularity: must be greater than or equal to 0
+           0000567890AaBbCcDdEeFfG|seed track name|spotify:track:1234567890AaBbCcDdEeFfG|101|TRUE |.seedTracks[0].popularity: must be less than or equal to 100
+           0000567890AaBbCcDdEeFfG|seed track name|spotify:track:1234567890AaBbCcDdEeFfG|51 |FALSE|.seedTracks[0].artists: must not be empty
+           """)
+  void itShouldDetectGetRecommendationsConstraintViolationsWhenSeedTracksElementIsNotValid(
+      String id, String name, URI uri, Integer popularity, Boolean hasArtists, String message)
+      throws Exception {
+    // Given
+    SpotifyArtist artist =
+        Artist.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("artist name")
+            .uri(URI.create("spotify:artist:0000567890AaBbCcDdEeFfG"))
             .build();
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    List<SpotifyArtist> artists = hasArtists ? List.of(artist) : List.of();
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
+    SpotifyTrack track =
+        Track.builder().id(id).name(name).uri(uri).popularity(popularity).artists(artists).build();
 
-    given(requestConfig.getLimit()).willReturn(50);
+    List<SpotifyTrack> tracks = List.of(track);
 
-    List<SpotifyTrackItem> spotifyTrackItems = new ArrayList<>();
-    spotifyTrackItems.add(null);
-    spotifyTrackItems.add(null);
+    TrackFeatures trackFeatures = TrackFeatures.builder().build();
 
-    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
-        .willReturn(new GetRecommendationsResponse(spotifyTrackItems, null));
+    Method getRecommendations =
+        RecommendationsService.class.getMethod(
+            "getRecommendations", List.class, SpotifyTrackFeatures.class);
+
+    Object[] parameterValues = {tracks, trackFeatures};
+
+    // When
+    Set<ConstraintViolation<RecommendationsService>> constraintViolations =
+        executableValidator.validateParameters(underTest, getRecommendations, parameterValues);
+
     // Then
-    assertThat(underTest.getRecommendations(List.of(seedTrack), null)).isEmpty();
-    then(trackMapper).should().mapItemsToTracks(spotifyTrackItemsArgumentCaptor.capture());
-    assertThat(spotifyTrackItemsArgumentCaptor.getValue()).isEmpty();
+    assertThat(constraintViolations).hasSize(1);
+    assertThat(new ConstraintViolationException(constraintViolations))
+        .hasMessage(GET_RECOMMENDATIONS + message);
   }
 
   @Test
-  void itShouldThrowGetRecommendationsExceptionWhenSpotifyClientThrowsRuntimeException() {
+  void itShouldDetectGetRecommendationsConstraintViolationWhenTrackFeaturesIsNull()
+      throws Exception {
+
+    Artist artist =
+        Artist.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("artist name")
+            .uri(URI.create("spotify:artist:0000567890AaBbCcDdEeFfG"))
+            .genres(Collections.emptyList())
+            .build();
+
+    List<SpotifyArtist> artists = List.of(artist);
+
+    Track track =
+        Track.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("seed track name")
+            .uri(URI.create("spotify:track:0000567890AaBbCcDdEeFfG"))
+            .popularity(51)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> tracks = List.of(track);
+
+    Method getRecommendations =
+        RecommendationsService.class.getMethod(
+            "getRecommendations", List.class, SpotifyTrackFeatures.class);
+
+    Object[] parameterValues = {tracks, null};
+
+    // When
+    Set<ConstraintViolation<RecommendationsService>> constraintViolations =
+        executableValidator.validateParameters(underTest, getRecommendations, parameterValues);
+
+    // Then
+    assertThat(constraintViolations).hasSize(1);
+    assertThat(new ConstraintViolationException(constraintViolations))
+        .hasMessage(GET_RECOMMENDATIONS + ".trackFeatures: must not be null");
+  }
+
+  @Test
+  void itShouldThrowRecommendationExceptionWhenSpotifyClientThrowsRuntimeException() {
     // Given
     String message = "message";
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+
+    Artist artist =
+        Artist.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("artist name")
+            .uri(URI.create("spotify:artist:0000567890AaBbCcDdEeFfG"))
+            .genres(Collections.emptyList())
             .build();
 
-    List<SpotifyTrack> seedTracks = Collections.singletonList(seedTrack);
+    List<SpotifyArtist> artists = List.of(artist);
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    Track track =
+        Track.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("seed track name")
+            .uri(URI.create("spotify:track:0000567890AaBbCcDdEeFfG"))
+            .popularity(51)
+            .artists(artists)
+            .build();
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
+    List<SpotifyTrack> seedTracks = List.of(track);
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
 
     given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
         .willThrow(new RuntimeException(message));
 
     // Then
-    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, null))
-        .isInstanceOf(GetRecommendationsException.class)
+    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, trackFeatures))
+        .isExactlyInstanceOf(GetRecommendationsException.class)
         .hasMessage(UNABLE_TO_GET_RECOMMENDATIONS + message);
   }
 
   @Test
-  void itShouldThrowGetRecommendationsExceptionWhenTrackFeaturesMapperThrowsRuntimeException() {
+  void itShouldThrowRecommendationExceptionWhenMapToRequestFeaturesThrowsRuntimeException() {
     // Given
     String message = "message";
 
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+    Artist artist =
+        Artist.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("artist name")
+            .uri(URI.create("spotify:artist:0000567890AaBbCcDdEeFfG"))
+            .genres(Collections.emptyList())
             .build();
 
-    List<SpotifyTrack> seedTracks = Collections.singletonList(seedTrack);
+    List<SpotifyArtist> artists = List.of(artist);
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any())).willThrow(new RuntimeException(message));
+    Track track =
+        Track.builder()
+            .id("0000567890AaBbCcDdEeFfG")
+            .name("seed track name")
+            .uri(URI.create("spotify:track:0000567890AaBbCcDdEeFfG"))
+            .popularity(51)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> seedTracks = List.of(track);
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willThrow(new RuntimeException(message));
 
     // Then
-    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, null))
-        .isInstanceOf(GetRecommendationsException.class)
+    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, trackFeatures))
+        .isExactlyInstanceOf(GetRecommendationsException.class)
         .hasMessage(UNABLE_TO_GET_RECOMMENDATIONS + message);
   }
 
   @Test
-  void itShouldThrowGetRecommendationsExceptionWhenTrackMapperThrowsRuntimeException() {
+  void itShouldThrowRecommendationExceptionWhenMapItemsToTracksThrowsRuntimeException() {
     // Given
     String message = "message";
-    String getRecommendationsResponseJson =
-        """
-          {
-            "tracks":[
-              {
-                "album":{
-                  "album_type":"SINGLE",
-                  "artists":[
-                    {
-                      "external_urls":{
-                        "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                      },
-                      "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                      "id":"8ArsfFN0BmEeVYPzQEReRv",
-                      "name":"name",
-                      "type":"artist",
-                      "uri":"spotify:artist:8ArsfFN0BmEeVYPzQEReRv"
-                    }
-                  ],
-                  "available_markets":[
-                    "AD"
-                  ],
-                  "external_urls":{
-                    "spotify":"https://open.spotify.com/album/0Ta0Ro3omKEm0SRTxYX5ZX"
-                  },
-                  "href":"https://api.spotify.com/v1/albums/0Ta0Ro3omKEm0SRTxYX5ZX",
-                  "id":"0Ta0Ro3omKEm0SRTxYX5ZX",
-                  "images":[
-                    {
-                      "height":640,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":640
-                    },
-                    {
-                      "height":300,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":300
-                    },
-                    {
-                      "height":64,
-                      "url":"https://i.scdn.co/image/1234567890",
-                      "width":64
-                    }
-                  ],
-                  "name":"Sleep Paralysis",
-                  "release_date":"2022-01-01",
-                  "release_date_precision":"day",
-                  "total_tracks":1,
-                  "type":"album",
-                  "uri":"spotify:album:0Ta0Ro3omKEm0SRTxYX5ZX"
-                },
-                "artists":[
-                  {
-                    "external_urls":{
-                      "spotify":"https://open.spotify.com/artist/8ArsfFN0BmEeVYPzQEReRv"
-                    },
-                    "href":"https://api.spotify.com/v1/artists/8ArsfFN0BmEeVYPzQEReRv",
-                    "id":"5VnrVRYzaatWXs102ScGwN",
-                    "name":"name",
-                    "type":"artist",
-                    "uri":"spotify:artist:5VnrVRYzaatWXs102ScGwN"
-                  }
-                ],
-                "available_markets":[
-                  "AR"
-                ],
-                "disc_number":1,
-                "duration_ms":213030,
-                "explicit":true,
-                "external_ids":{
-                  "isrc":"CC5KR0000100"
-                },
-                "external_urls":{
-                  "spotify":"https://open.spotify.com/track/3ZRTh3V53QHNjJRCzwlAqh"
-                },
-                "href":"https://api.spotify.com/v1/tracks/3ZRTh3V53QHNjJRCzwlAqh",
-                "id":"5Ko5Jn0OG8IDFEHhAYsCnj",
-                "is_local":false,
-                "name":"name",
-                "popularity":55,
-                "preview_url":"https://p.scdn.co/mp3-preview/cce282e15fecd2308ac7de6d3c1439bb8fffb304?cid=774b29d4f13844c495f206cafdad9c86",
-                "track_number":1,
-                "type":"track",
-                "uri":"spotify:track:5Ko5Jn0OG8IDFEHhAYsCnj"
-              }
-            ],
-            "seeds":[
-              {
-                "initialPoolSize":0,
-                "afterFilteringSize":0,
-                "afterRelinkingSize":0,
-                "id":"synt-pop",
-                "type":"GENRE",
-                "href":null
-              },
-              {
-                "initialPoolSize":0,
-                "afterFilteringSize":0,
-                "afterRelinkingSize":0,
-                "id":"6J4LmfWAfxkEfQZE0OKCo6",
-                "type":"ARTIST",
-                "href":"https://api.spotify.com/v1/artists/6J4LmfWAfxkEfQZE0OKCo6"
-              },
-              {
-                "initialPoolSize":500,
-                "afterFilteringSize":500,
-                "afterRelinkingSize":500,
-                "id":"6J4LmfWAfxkEfQZE0OKCo6",
-                "type":"TRACK",
-                "href":"https://api.spotify.com/v1/tracks/6J4LmfWAfxkEfQZE0OKCo6"
-              }
-            ]
-          }
-          """;
 
-    SpotifyTrack seedTrack =
-        Track.builder()
-            .id("0WNrVRYzaatWXs002ScGwN")
-            .name("name")
-            .uri(URI.create("spotify:track:0WNrVRYzaatWXs002ScGwN"))
-            .popularity(55)
-            .artists(Collections.emptyList())
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String seedTrackId = "0000567890AaBbCcDdEeFfG";
+    String seedTrackName = "seed track name";
+    URI seedTrackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer seedTrackPopularity = 51;
+
+    String recommendationTrackId = "112233445AaBbCcDdEeFfG";
+    String recommendationTrackName = "recommendation track name";
+    URI recommendationTrackUri = URI.create("spotify:track:112233445AaBbCcDdEeFfG");
+    Integer recommendationTrackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
             .build();
 
-    List<SpotifyTrack> seedTracks = Collections.singletonList(seedTrack);
+    List<SpotifyArtist> artists = List.of(artist);
 
-    String GetRecommendationsRequestTrackFeaturesJson = """
-           {"minTempo":120}""";
+    Track seedTrack =
+        Track.builder()
+            .id(seedTrackId)
+            .name(seedTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
 
-    given(trackFeaturesMapper.mapToRequestFeatures(any()))
-        .willReturn(
-            jsonToObject(
-                GetRecommendationsRequestTrackFeaturesJson,
-                GetRecommendationsRequest.TrackFeatures.class));
+    List<SpotifyTrack> seedTracks = List.of(seedTrack);
 
-    given(requestConfig.getLimit()).willReturn(1);
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    SpotifyArtistItem artistItem =
+        SpotifyArtistItem.builder().id(artistId).name(artistName).uri(artistUri).build();
+
+    List<SpotifyArtistItem> artistItems = List.of(artistItem);
+
+    SpotifyTrackItem trackItem =
+        SpotifyTrackItem.builder()
+            .id(recommendationTrackId)
+            .name(recommendationTrackName)
+            .uri(recommendationTrackUri)
+            .popularity(recommendationTrackPopularity)
+            .artistItems(artistItems)
+            .build();
+
+    List<SpotifyTrackItem> recommendationTrackItems = Collections.singletonList(trackItem);
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    GetRecommendationsResponse getRecommendationsResponse =
+        GetRecommendationsResponse.builder().trackItems(recommendationTrackItems).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
+
     given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
-        .willReturn(jsonToObject(getRecommendationsResponseJson, GetRecommendationsResponse.class));
+        .willReturn(getRecommendationsResponse);
+
     given(trackMapper.mapItemsToTracks(anyList())).willThrow(new RuntimeException(message));
 
     // Then
-    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, null))
-        .isInstanceOf(GetRecommendationsException.class)
+    assertThatThrownBy(() -> underTest.getRecommendations(seedTracks, trackFeatures))
+        .isExactlyInstanceOf(GetRecommendationsException.class)
         .hasMessage(UNABLE_TO_GET_RECOMMENDATIONS + message);
+  }
+
+  @Test
+  void itShouldReturnEmptyListWhenSpotifyTrackItemsListIsEmpty() {
+    // Given
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String seedTrackId = "0000567890AaBbCcDdEeFfG";
+    String seedTrackName = "seed track name";
+    URI seedTrackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer seedTrackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
+            .build();
+
+    List<SpotifyArtist> artists = List.of(artist);
+
+    Track seedTrack =
+        Track.builder()
+            .id(seedTrackId)
+            .name(seedTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> seedTracks = List.of(seedTrack);
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    List<SpotifyTrackItem> recommendationTrackItems = List.of();
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    GetRecommendationsResponse getRecommendationsResponse =
+        GetRecommendationsResponse.builder().trackItems(recommendationTrackItems).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
+
+    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
+        .willReturn(getRecommendationsResponse);
+
+    // Then
+    assertThat(underTest.getRecommendations(seedTracks, trackFeatures)).isEmpty();
+
+    then(trackMapper).should(never()).mapItemsToTracks(trackItemsArgumentCaptor.capture());
+
+    assertThat(trackItemsArgumentCaptor.getAllValues()).isEmpty();
+  }
+
+  @Test
+  void itShouldReturnEmptyListWhenSpotifyTrackItemsListElementsAreNull() {
+    // Given
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String seedTrackId = "0000567890AaBbCcDdEeFfG";
+    String seedTrackName = "seed track name";
+    URI seedTrackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer seedTrackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
+            .build();
+
+    List<SpotifyArtist> artists = List.of(artist);
+
+    Track seedTrack =
+        Track.builder()
+            .id(seedTrackId)
+            .name(seedTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> seedTracks = List.of(seedTrack);
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    List<SpotifyTrackItem> recommendationTrackItems = new ArrayList<>();
+    recommendationTrackItems.add(null);
+    recommendationTrackItems.add(null);
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    GetRecommendationsResponse getRecommendationsResponse =
+        GetRecommendationsResponse.builder().trackItems(recommendationTrackItems).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
+
+    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
+        .willReturn(getRecommendationsResponse);
+
+    // Then
+    assertThat(underTest.getRecommendations(seedTracks, trackFeatures)).isEmpty();
+
+    then(trackMapper).should(never()).mapItemsToTracks(trackItemsArgumentCaptor.capture());
+
+    assertThat(trackItemsArgumentCaptor.getAllValues()).isEmpty();
+  }
+
+  @Test
+  void itShouldReturnNonNullElementsWhenSpotifyTrackItemsListContainsNullElements() {
+    // Given
+    String artistId = "0000567890AaBbCcDdEeFfG";
+    String artistName = "artist name";
+    URI artistUri = URI.create("spotify:artist:0000567890AaBbCcDdEeFfG");
+
+    String seedTrackId = "0000567890AaBbCcDdEeFfG";
+    String seedTrackName = "seed track name";
+    URI seedTrackUri = URI.create("spotify:track:0000567890AaBbCcDdEeFfG");
+    Integer seedTrackPopularity = 51;
+
+    String recommendationTrackId = "112233445AaBbCcDdEeFfG";
+    String recommendationTrackName = "recommendation track name";
+    URI recommendationTrackUri = URI.create("spotify:track:112233445AaBbCcDdEeFfG");
+    Integer recommendationTrackPopularity = 51;
+
+    Artist artist =
+        Artist.builder()
+            .id(artistId)
+            .name(artistName)
+            .uri(artistUri)
+            .genres(Collections.emptyList())
+            .build();
+
+    List<SpotifyArtist> artists = List.of(artist);
+
+    Track seedTrack =
+        Track.builder()
+            .id(seedTrackId)
+            .name(seedTrackName)
+            .uri(seedTrackUri)
+            .popularity(seedTrackPopularity)
+            .artists(artists)
+            .build();
+
+    List<SpotifyTrack> seedTracks = List.of(seedTrack);
+
+    SpotifyArtistItem artistItem =
+        SpotifyArtistItem.builder().id(artistId).name(artistName).uri(artistUri).build();
+
+    List<SpotifyArtistItem> artistItems = List.of(artistItem);
+
+    SpotifyTrackItem trackItem =
+        SpotifyTrackItem.builder()
+            .id(recommendationTrackId)
+            .name(recommendationTrackName)
+            .uri(recommendationTrackUri)
+            .popularity(recommendationTrackPopularity)
+            .artistItems(artistItems)
+            .build();
+
+    BigDecimal minTempo = new BigDecimal(120);
+    SpotifyTrackFeatures trackFeatures = TrackFeatures.builder().tempo(minTempo).build();
+
+    List<SpotifyTrackItem> recommendationTrackItems = new ArrayList<>();
+    recommendationTrackItems.add(null);
+    recommendationTrackItems.add(trackItem);
+    recommendationTrackItems.add(null);
+
+    GetRecommendationsRequest.TrackFeatures requestTrackFeatures =
+        GetRecommendationsRequest.TrackFeatures.builder().minTempo(minTempo).build();
+
+    Integer limit = 10;
+
+    GetRecommendationsResponse getRecommendationsResponse =
+        GetRecommendationsResponse.builder().trackItems(recommendationTrackItems).build();
+
+    given(trackFeaturesMapper.mapToRequestFeatures(any(TrackFeatures.class)))
+        .willReturn(requestTrackFeatures);
+
+    given(requestConfig.getLimit()).willReturn(limit);
+
+    given(spotifyClient.getRecommendations(any(GetRecommendationsRequest.class)))
+        .willReturn(getRecommendationsResponse);
+
+    // When
+    underTest.getRecommendations(seedTracks, trackFeatures);
+
+    // Then
+    then(trackMapper).should().mapItemsToTracks(trackItemsArgumentCaptor.capture());
+    assertThat(trackItemsArgumentCaptor.getValue()).containsExactly(trackItem);
   }
 }
